# FedMed

./: .gitignore  README.md  pyproject.toml
src/: run_liver_client.bat  run_liver_client.sh  run_liver_server.bat  run_liver_server.sh
src/fed_core/: fed_client.py  fed_server.py  fedmorph_strategy.py
src/use_cases/liver_segmentation/: check_ready.py  main_client.py  main_server.py  prepare_client_data.py
src/use_cases/liver_segmentation/configs/: base.yaml
src/use_cases/liver_segmentation/models/: segresnet_cirrhosis.py
src/use_cases/liver_segmentation/utils/: dataset.py  loss.py  metrics.py
